--- a/Editor/XS.EditorExtensionsEditor.asmdef
+++ b/Editor/XS.EditorExtensionsEditor.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "GUID:88e2bc408dbc56846b41339724e04471",
-        "GUID:e9d3cf9d156ccee4eb38af5c53f0ef62"
+        "GUID:e9d3cf9d156ccee4eb38af5c53f0ef62",
+        "GUID:6546d7765b4165b40850b3667f981c26",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
