--- a/Runtime/XS.EditorExtensions.asmdef
+++ b/Runtime/XS.EditorExtensions.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:37e030ce89aa5244da079dc58a0a15f8",
-        "GUID:4270073c412aa7648a02fc93ab275391"
+        "GUID:4270073c412aa7648a02fc93ab275391",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
