--- a/Runtime/XS.EditorExtensions.asmdef
+++ b/Runtime/XS.EditorExtensions.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:37e030ce89aa5244da079dc58a0a15f8",
         "GUID:4270073c412aa7648a02fc93ab275391",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
